@@ -1,6 +1,6 @@
 CHANGELOG for smartmontools
 
-$Id: CHANGELOG,v 1.19 2002/10/24 11:38:11 ballen4705 Exp $
+$Id: CHANGELOG,v 1.20 2002/10/25 14:15:05 ballen4705 Exp $
 
 Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 
@@ -28,8 +28,15 @@ NOTES FOR NEXT RELEASE:
 
 smartmontools-5.0-12
 
+    smartd on startup now looks in the configuration file /etc/smartd.conf for
+    a list of devices which to include in its monitoring list.  See man page
+    (man smartd) for syntax.
+
     smartd: close file descriptors of SCSI device if not SMART capable
+    Closes ALL file descriptors after forking to daemon.
+
     added new temperature attribute (231, temperature)
+
     smartd: now open ATA disks using O_RDONLY
 
 smartmontools-5.0-11
